# SafeWayServer

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml  rustnew.yml
migrations/2020-06-30-083400_create_posts/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
