[package]
name = "safewayserver"
version = "1.0.0"
authors = ["Aursen <jeanno11@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = { version = "2.0.0" }

bytes = "0.5"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "^0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }